# actota-api

./: .dockerignore  .env.example  .gitignore  2  ADMIN_API_GUIDE.md  ADMIN_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  SETUP_COMPLETION_SUMMARY.md  VERTEX_AI_SETUP_GUIDE.md  activities-sync-prod-config.yaml  activities-sync-uat-config.yaml  actota-api-prod-config.yaml  actota-api-uat-config.yaml  deploy.sh  docker-compose.dev.yml  docker-compose.yml  example_search_response.json  openapi-spec.yaml  populate_env.sh  setup_vertex_search.sh  test_vertex_search.sh
.github/workflows/: deploy.yaml
docs/: admin-permissions.md
src/: lib.rs  main.rs
src/db/: mongo.rs
src/middleware/: auth.rs  auth_context.rs  mod.rs  role_auth.rs
src/models/: account.rs  activity.rs  bookings.rs  facebook_auth.rs  google_auth.rs  interests.rs  itinerary.rs  location.rs  mod.rs  refund_policy.rs  search.rs  search_response.rs  user.rs
src/models/itinerary/: base.rs  mod.rs  populated.rs  transforms.rs
src/routes/: account.rs  activity.rs  dream-vacation.rs  dream_vacation.rs  featured_vacation.rs  health.rs  itinerary.rs  location.rs  lodging.rs  mod.rs  payment.rs
src/routes/account/: account_info.rs  auth.rs  bookings.rs  email_verification.rs  facebook_auth.rs  favorites.rs  google_auth.rs  linked_accounts.rs  mod.rs  payment_methods.rs  payment_methods_update.rs  role_management.rs  transactions.rs
src/routes/admin/: mod.rs
src/services/: account_service.rs  distance_service.rs  facebook_auth_service.rs  google_auth_service.rs  image_service.rs  itinerary_generation_service.rs  itinerary_search_service.rs  itinerary_service.rs  mod.rs  pricing_service.rs  route_optimization_service.rs  search_scoring.rs  vertex_search_service.rs
src/services/payment/: interface.rs
src/services/stripe/: customer.rs  mod.rs  provider.rs
src/services/stripe/models/: customer.rs  mod.rs  payment_method.rs
tests/: README.md  admin_routes_test.rs  integration_test.rs  itinerary_routes_test.rs  payment_routes_test.rs  protected_routes_test.rs  public_routes_test.rs  simple_test.rs
tests/common/: mod.rs
