[package]
name = "actota-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
mongodb = "3.1.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
